# universitas-pelita-harapan-ppmk-1520-uas-security-machine-learning

./: .pre-commit-config.yaml  README.md  build.py  pyproject.toml
marimo/: AST Model.py  Hybrid Model.py  Lexical Model.py  Machine Learning On Pattern Injection SQL.py  SQL Injection AST Model.py  SQL Injection Hybrid Model.py  SQL Injection Lexical Model.py
src/ml/: cli.py  schema.py
src/parser/: __init__.py
src/scenario/sqli/: app.py  schema.py
src/sqli/: __main__.py  app.py  cli.py  db.py  schema.py
src/sqli/db/: schema.sql
