[build-system]
requires = ["poetry-core>=2.2.1"]
build-backend = "poetry.core.masonry.api"

[tool.poetry]
name = "sqli-xss-ml-detector"
version = "0.0.1.dev0"
description = "A simple machine learning for detection SQL Injection and XSS (Property of Obserynt)"
readme = "README.md"
license = "MIT"
authors = [
  "Dwi Mulia Mokoginta (UPH) <dwi-mulia-mokoginta@protonmail.com>",
  "Sapwages Triazana (UPH)",
  "Sony Surahman (UPH)",
  "Kristian Bintang Marnaek Hutape (UNESA) <kristianbintang5656@gmail.com>"
]

packages = [
  { include = "sqli", from = "src" }
]

[tool.poetry.dependencies]
faker = ">=38.2.0"
flask = ">=3.1.2"
ipython = ">=9.7.0"
marimo = { version = ">=0.18.0", extras = ["sql"] }
numpy = ">=2.3.5"
pandas = ">=2.3.3"
poetry = ">=2.2.1"
poetry-core = ">=2.2.1"
pydantic = ">=2.12.4"
python = ">=3.11,<4.0"
scikit-learn = ">=1.7.2"
sqlalchemy = ">=2.0.44"
sqlglot = { version = ">=28.0.0", extras = ["rs"] }

[tool.poetry.group.dev.dependencies]
ruff = "^0.14.5"

[tool.poetry.scripts]
sqli = "sqli.__main__:main"

[tool.ruff]
src = ["src"]
exclude = [".venv"]
fix = true
show-fixes = true
output-format = "full"
line-length = 120
indent-width = 2

[tool.ruff.format]
quote-style = "single"
indent-style = "space"

[tool.ruff.lint]
select = [
  "B",   # flake8-bugbear
  "E",   # pycodestyle error
  "F",   # pyflakes
  "I",   # isort
  "UP",  # pyupgrade
  "W",   # pycodestyle warning
]

[tool.ruff.lint.isort]
force-single-line = false
order-by-type = false

[egg_info]
egg_base = "dist/.egg-info"
